src/main/resources/api/exchange_modules/fd98f1cf-31e0-4618-ab8d-ddb9983647fa/common-lib/1.0.0/examples/error/401.raml
#%RAML 1.0 NamedExample
code: "401"
message: "UnAuthorized access. The supplied credentials, if any, are not sufficient to access the resource."
